--- a/Server/package.json
+++ b/Server/package.json
@@ -20,9 +20,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
     "redis": "^4.6.14",
-    "redis-commander": "^0.8.0"
+    "rotating-file-stream": "^3.2.1",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0"
   }
 }
