--- a/Server/package.json
+++ b/Server/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/api/v1/dist/bundle.js",
+    "run-webpack": "webpack --node development --config webpack.config.js",
     "dev": "nodemon ./src/config/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +27,14 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "babel-loader": "^9.1.3",
+    "cors": "^2.8.5",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
