--- a/Server/package.json
+++ b/Server/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^9.1.3",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
