--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
